# eco-perf

./: CMakeLists.txt  README.md  etop.c  main.c  test_drawable.c  test_terminal.c
applications/: CMakeLists.txt
applications/etop/: CMakeLists.txt  etop.c  main.c  test.c
applications/etop/widgets/: CMakeLists.txt  core_monitor.c  core_monitor.h  (+8 more)
eco_perf/: CMakeLists.txt  cross_os_std.h
eco_perf/cute_terminal/: CMakeLists.txt  terminal_application.c  terminal_application.h
eco_perf/eco_std/: CMakeLists.txt  algo.c  algo.h  comparison.c  comparison.h  container.c  container.h  def.h  error.c  error.h  es_string.c  es_string.h  hash.c  hash.h  io.c  io.h  map.c  map.h  memory.c  memory.h  set.h  vector.c  vector.h
eco_perf/graphics/: CMakeLists.txt  drawable_percent_bar.c  drawable_percent_bar.h  percent_bar.c  percent_bar.h  term_box.c  term_box.h  term_drawable.c  term_drawable.h  term_layouts.h  terminal_panel.c  terminal_panel.h
eco_perf/io/: CMakeLists.txt  format_definitions.h  io.c  terminal_cursor.c  terminal_cursor.h  terminal_interface.c  terminal_interface.h
eco_perf/metrics/: CMakeLists.txt  cpu_usage.c  cpu_usage.h  memory_usage.c  memory_usage.h  process.c  process.h  process_list.c  process_list.h  program_list.c  program_list.h  resource_usage.c  resource_usage.h  sort.c  sort.h
eco_perf/system/: CMakeLists.txt  file_stat.c  file_stat.h  list_dir.c  list_dir.h
eco_perf/terminal_interface/: CMakeLists.txt
tests/: CMakeLists.txt  answer_test_box.c  test_box.c  test_drawable.c  test_ls.c  test_std.c  test_string.c  test_terminal.c
(+93 files in other folders)
